fix(diagram): hide overflow of the vz-diagram

--- a/src/modules/core/core.scss
+++ b/src/modules/core/core.scss
@@ -3,6 +3,7 @@
 vz-diagram{
   display: block;
   position: relative;
+  overflow: hidden;
 }
 vz-diagram > svg{
   width: 100%;
